tdf#142337 Button::GetOptimalSize only considered image beside text case

not image above/below text

Change-Id: I5a8e9bfb36cee1460d43478a100e574a3bf1930e